# plasmid_optimizer

./: .dockerignore  .gcloudignore  .gitignore  Dockerfile  HOSTING.md  README.md  cloudbuild.yaml  index.py  modal_app.py  pyproject.toml  requirements.txt  vercel.json
api/: index.py  main.py
scripts/: entrypoint_gcs.py  entrypoint_gcs.sh  export_pepmlm_for_gcs.py
src/plasmid_optimizer/: __init__.py  cli.py  constraints.py  core.py  io.py  species.py  uniprot.py
src/plasmid_optimizer.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/plasmid_optimizer/ml/: __init__.py  metalatte.py  pepmlm.py
web/: index.html
